--- a/feed.html
+++ b/feed.html
@@ -165,7 +165,6 @@
       </nav>
     </header>
     <div class="max-w-4xl mx-auto p-4">
-      <!-- Header -->
       <div class="flex justify-between items-center mb-6">
         <h1 class="text-2xl font-bold text-gray-900">Feed</h1>
         <button
@@ -192,7 +191,7 @@
 
       <div class="grid gap-4">
         <div
-          class="max-w-sm bg-white rounded-lg shadow-md overflow-hidden transform transition-all hover:scale-105"
+          class="max-w bg-white rounded-lg shadow-md overflow-hidden transform transition-all hover:scale-105"
         >
           <svg
             class="relative left-5"
@@ -229,7 +228,7 @@
         </div>
 
         <div
-          class="max-w-sm bg-white rounded-lg shadow-md overflow-hidden transform transition-all hover:scale-105"
+          class="max-w bg-white rounded-lg shadow-md overflow-hidden transform transition-all hover:scale-105"
         >
           <svg
             class="relative left-5"
@@ -260,7 +259,7 @@
         </div>
 
         <div
-          class="max-w-sm bg-white rounded-lg shadow-md overflow-hidden transform transition-all hover:scale-105"
+          class="max-w bg-white rounded-lg shadow-md overflow-hidden transform transition-all hover:scale-105"
         >
           <svg
             class="relative left-5"
@@ -291,7 +290,7 @@
         </div>
 
         <div
-          class="max-w-sm bg-white rounded-lg shadow-md overflow-hidden transform transition-all hover:scale-105"
+          class="max-w bg-white rounded-lg shadow-md overflow-hidden transform transition-all hover:scale-105"
         >
           <svg
             class="relative left-5"
@@ -300,9 +299,7 @@
             viewBox="0 0 31 31"
             fill="none"
             xmlns="http://www.w3.org/2000/svg"
-          >
-            <!-- SVG content -->
-          </svg>
+          ></svg>
           <div class="p-2 relative">
             <h2 class="text-lg font-semibold text-gray-800 hover:text-blue-500">
               Healthy Living Tips
@@ -323,7 +320,6 @@
         </div>
       </div>
 
-      <!-- New Post Modal -->
       <div
         id="newPostModal"
         class="hidden fixed inset-0 bg-black bg-opacity-50 items-center justify-center"
