--- a/profile.html
+++ b/profile.html
@@ -61,15 +61,19 @@
               class="py-4 px-2 text-white font-semibold border-b-4 border-customNav"
               >Profile</a
             >
-            <a href="/feed.html" class="py-4 px-2 text-black font-semibold"
+            <a
+              href="/feed.html"
+              class="py-4 px-2 text-black font-semibold hover:text-white transition duration-300"
               >Feed</a
-            >
-            <a href="/feed.html" class="py-4 px-2 text-black font-semibold"
-              >Option</a
             >
             <a
               href="/feed.html"
-              class="py-4 px-2 text-black font-semibold hover:text-customNav transition duration-300"
+              class="py-4 px-2 text-black font-semibold hover:text-white transition duration-300"
+              >Option</a
+            >
+            <a
+              href="/index.html"
+              class="py-4 px-2 text-black font-semibold hover:text-white transition duration-300"
               >Signup</a
             >
             <svg
@@ -165,15 +169,11 @@
     </header>
 
     <div class="max-w-4xl mx-auto p-4">
-      <!-- Profile Header -->
-      <div class="bg-white rounded-lg shadow-md p-6 mb-6">
-        <div class="flex flex-col md:flex-row items-center gap-6">
-          <!-- Profile Image -->
+      <div class="bg-white w-96 rounded-lg shadow-md p-4 mb-6">
+        <div class="flex flex-col md:flex-row items-start gap-6">
           <div class="relative">
             <svg
-              class="relative left-5"
-              width="31"
-              height="31"
+              class="w-16 h-16 md:w-20 md:h-20"
               viewBox="0 0 31 31"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
@@ -188,7 +188,7 @@
           </div>
 
           <!-- Profile Info -->
-          <div class="flex-1 text-center md:text-left relative left-20">
+          <div class="flex-1 text-center md:text-left font-rob">
             <h1 class="text-2xl font-bold mb-2">Sarah Johnson</h1>
             <p class="text-gray-600 mb-4">@sarahjohnson</p>
 
@@ -198,11 +198,11 @@
                 <p class="font-bold">1,234</p>
                 <p class="text-gray-600 text-sm">Posts</p>
               </div>
-              <div class="text-center relative left-2">
+              <div class="text-center">
                 <p class="font-bold">5.6K</p>
                 <p class="text-gray-600 text-sm">Followers</p>
               </div>
-              <div class="text-center relative left-3">
+              <div class="text-center">
                 <p class="font-bold">891</p>
                 <p class="text-gray-600 text-sm">Following</p>
               </div>
@@ -210,7 +210,7 @@
 
             <button
               type="submit"
-              class="w-full bg-teal-500 text-white py-2 rounded-lg font-semibold hover:bg-teal-300 transition-colors"
+              class="px-4 py-2 bg-teal-500 text-white rounded-lg font-semibold hover:bg-teal-300 transition-colors"
             >
               Follow
             </button>
@@ -218,186 +218,113 @@
         </div>
       </div>
 
-      <!-- Posts Section -->
-      <div class="space-y-4">
-        <!-- Post 1 -->
-        <div class="bg-white rounded-lg shadow-md">
-          <div class="p-4">
-            <div class="flex items-center gap-3 mb-3">
-              <svg
-                width="31"
-                height="31"
-                viewBox="0 0 31 31"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M29.8929 23.25V27.6786C29.8929 28.2658 29.6596 28.8291 29.2443 29.2443C28.8291 29.6596 28.2659 29.8929 27.6786 29.8929H23.25M23.25 1.10715H27.6786C28.2659 1.10715 28.8291 1.34044 29.2443 1.7557C29.6596 2.17096 29.8929 2.73417 29.8929 3.32143V7.75M1.10718 7.75V3.32143C1.10718 2.73417 1.34047 2.17096 1.75573 1.7557C2.17099 1.34044 2.7342 1.10715 3.32146 1.10715H7.75003M7.75003 29.8929H3.32146C2.7342 29.8929 2.17099 29.6596 1.75573 29.2443C1.34047 28.8291 1.10718 28.2658 1.10718 27.6786V23.25M15.5 14.3929C16.6746 14.3929 17.801 13.9263 18.6315 13.0958C19.462 12.2652 19.9286 11.1388 19.9286 9.96429C19.9286 8.78976 19.462 7.66333 18.6315 6.83282C17.801 6.0023 16.6746 5.53572 15.5 5.53572C14.3255 5.53572 13.1991 6.0023 12.3686 6.83282C11.538 7.66333 11.0715 8.78976 11.0715 9.96429C11.0715 11.1388 11.538 12.2652 12.3686 13.0958C13.1991 13.9263 14.3255 14.3929 15.5 14.3929ZM23.921 24.3571C23.3486 22.5736 22.2248 21.0178 20.7114 19.914C19.198 18.8102 17.3732 18.2155 15.5 18.2155C13.6269 18.2155 11.8021 18.8102 10.2887 19.914C8.77529 21.0178 7.65144 22.5736 7.07911 24.3571H23.921Z"
-                  stroke="black"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-              </svg>
-              <div>
-                <p class="font-semibold">Sarah Johnson</p>
-                <p class="text-gray-500 text-sm">2h ago</p>
-              </div>
-            </div>
-
-            <p class="mb-4">
-              Just launched my new project! Super excited to share it with
-              everyone 🚀
-            </p>
-
-            <div class="flex gap-6">
-              <button
-                class="flex items-center gap-2 text-gray-600 hover:text-red-500"
-              >
-                <svg
-                  class="w-5 h-5"
-                  fill="none"
-                  stroke="currentColor"
-                  viewBox="0 0 24 24"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"
-                  ></path>
-                </svg>
-                <span>42</span>
-              </button>
-              <button
-                class="flex items-center gap-2 text-gray-600 hover:text-blue-500"
-              >
-                <svg
-                  class="w-5 h-5"
-                  fill="none"
-                  stroke="currentColor"
-                  viewBox="0 0 24 24"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z"
-                  ></path>
-                </svg>
-                <span>12</span>
-              </button>
-              <button
-                class="flex items-center gap-2 text-gray-600 hover:text-green-500"
-              >
-                <svg
-                  class="w-5 h-5"
-                  fill="none"
-                  stroke="currentColor"
-                  viewBox="0 0 24 24"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M8.684 13.342C8.886 12.938 9 12.482 9 12c0-.482-.114-.938-.316-1.342m0 2.684a3 3 0 110-2.684m0 2.684l6.632 3.316m-6.632-6l6.632-3.316m0 0a3 3 0 105.367-2.684 3 3 0 00-5.367 2.684zm0 9.316a3 3 0 105.368 2.684 3 3 0 00-5.368-2.684z"
-                  ></path>
-                </svg>
-                <span>5</span>
-              </button>
+      <div class="space-y-4 grid grid-cols-1">
+        <div class="bg-white rounded-lg shadow-md p-4 font-rob">
+          <div class="flex items-center gap-4 mb-3">
+            <svg class="w-8 h-8" fill="none" viewBox="0 0 31 31"></svg>
+            <div>
+              <p class="font-semibold font-rob">Sarah Johnson</p>
+              <p class="text-gray-500 text-sm">2h ago</p>
             </div>
           </div>
+          <p class="mb-4">Just launched my new project! 🚀</p>
+          <div class="flex justify-start gap-4">
+            <button
+              class="flex items-center gap-1 text-gray-600 hover:text-red-500"
+            >
+              ❤️ 42
+            </button>
+            <button
+              class="flex items-center gap-1 text-gray-600 hover:text-blue-500"
+            >
+              💬 12
+            </button>
+            <button
+              class="flex items-center gap-1 text-gray-600 hover:text-green-500"
+            >
+              🔄 5
+            </button>
+          </div>
         </div>
-
-        <!-- Post 2 -->
-        <div class="bg-white rounded-lg shadow-md">
-          <div class="p-4">
-            <div class="flex items-center gap-3 mb-3">
-              <svg
-                width="31"
-                height="31"
-                viewBox="0 0 31 31"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M29.8929 23.25V27.6786C29.8929 28.2658 29.6596 28.8291 29.2443 29.2443C28.8291 29.6596 28.2659 29.8929 27.6786 29.8929H23.25M23.25 1.10715H27.6786C28.2659 1.10715 28.8291 1.34044 29.2443 1.7557C29.6596 2.17096 29.8929 2.73417 29.8929 3.32143V7.75M1.10718 7.75V3.32143C1.10718 2.73417 1.34047 2.17096 1.75573 1.7557C2.17099 1.34044 2.7342 1.10715 3.32146 1.10715H7.75003M7.75003 29.8929H3.32146C2.7342 29.8929 2.17099 29.6596 1.75573 29.2443C1.34047 28.8291 1.10718 28.2658 1.10718 27.6786V23.25M15.5 14.3929C16.6746 14.3929 17.801 13.9263 18.6315 13.0958C19.462 12.2652 19.9286 11.1388 19.9286 9.96429C19.9286 8.78976 19.462 7.66333 18.6315 6.83282C17.801 6.0023 16.6746 5.53572 15.5 5.53572C14.3255 5.53572 13.1991 6.0023 12.3686 6.83282C11.538 7.66333 11.0715 8.78976 11.0715 9.96429C11.0715 11.1388 11.538 12.2652 12.3686 13.0958C13.1991 13.9263 14.3255 14.3929 15.5 14.3929ZM23.921 24.3571C23.3486 22.5736 22.2248 21.0178 20.7114 19.914C19.198 18.8102 17.3732 18.2155 15.5 18.2155C13.6269 18.2155 11.8021 18.8102 10.2887 19.914C8.77529 21.0178 7.65144 22.5736 7.07911 24.3571H23.921Z"
-                  stroke="black"
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                />
-              </svg>
-              <div>
-                <p class="font-semibold">Sarah Johnson</p>
-                <p class="text-gray-500 text-sm">5h ago</p>
-              </div>
+        <div class="bg-white rounded-lg shadow-md p-4 font-rob">
+          <div class="flex items-center gap-4 mb-3">
+            <svg class="w-8 h-8" fill="none" viewBox="0 0 31 31"></svg>
+            <div>
+              <p class="font-semibold font-rob">Sarah Johnson</p>
+              <p class="text-gray-500 text-sm">2h ago</p>
             </div>
-
-            <p class="mb-4">
-              Beautiful day for coding outside ☀️ #coding #lifestyle
-            </p>
-
-            <div class="flex gap-6">
-              <button
-                class="flex items-center gap-2 text-gray-600 hover:text-red-500"
-              >
-                <svg
-                  class="w-5 h-5"
-                  fill="none"
-                  stroke="currentColor"
-                  viewBox="0 0 24 24"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M4.318 6.318a4.5 4.5 0 000 6.364L12 20.364l7.682-7.682a4.5 4.5 0 00-6.364-6.364L12 7.636l-1.318-1.318a4.5 4.5 0 00-6.364 0z"
-                  ></path>
-                </svg>
-                <span>38</span>
-              </button>
-              <button
-                class="flex items-center gap-2 text-gray-600 hover:text-blue-500"
-              >
-                <svg
-                  class="w-5 h-5"
-                  fill="none"
-                  stroke="currentColor"
-                  viewBox="0 0 24 24"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z"
-                  ></path>
-                </svg>
-                <span>8</span>
-              </button>
-              <button
-                class="flex items-center gap-2 text-gray-600 hover:text-green-500"
-              >
-                <svg
-                  class="w-5 h-5"
-                  fill="none"
-                  stroke="currentColor"
-                  viewBox="0 0 24 24"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M8.684 13.342C8.886 12.938 9 12.482 9 12c0-.482-.114-.938-.316-1.342m0 2.684a3 3 0 110-2.684m0 2.684l6.632 3.316m-6.632-6l6.632-3.316m0 0a3 3 0 105.367-2.684 3 3 0 00-5.367 2.684zm0 9.316a3 3 0 105.368 2.684 3 3 0 00-5.368-2.684z"
-                  ></path>
-                </svg>
-                <span>3</span>
-              </button>
+          </div>
+          <p class="mb-4">Just launched my new project! 🚀</p>
+          <div class="flex justify-start gap-4">
+            <button
+              class="flex items-center gap-1 text-gray-600 hover:text-red-500"
+            >
+              ❤️ 42
+            </button>
+            <button
+              class="flex items-center gap-1 text-gray-600 hover:text-blue-500"
+            >
+              💬 12
+            </button>
+            <button
+              class="flex items-center gap-1 text-gray-600 hover:text-green-500"
+            >
+              🔄 5
+            </button>
+          </div>
+        </div>
+        <div class="bg-white rounded-lg shadow-md p-4 font-rob">
+          <div class="flex items-center gap-4 mb-3">
+            <svg class="w-8 h-8" fill="none" viewBox="0 0 31 31"></svg>
+            <div>
+              <p class="font-semibold font-rob">Sarah Johnson</p>
+              <p class="text-gray-500 text-sm">2h ago</p>
             </div>
+          </div>
+          <p class="mb-4">Just launched my new project! 🚀</p>
+          <div class="flex justify-start gap-4">
+            <button
+              class="flex items-center gap-1 text-gray-600 hover:text-red-500"
+            >
+              ❤️ 42
+            </button>
+            <button
+              class="flex items-center gap-1 text-gray-600 hover:text-blue-500"
+            >
+              💬 12
+            </button>
+            <button
+              class="flex items-center gap-1 text-gray-600 hover:text-green-500"
+            >
+              🔄 5
+            </button>
+          </div>
+        </div>
+        <div class="bg-white rounded-lg shadow-md p-4 font-rob">
+          <div class="flex items-center gap-4 mb-3">
+            <svg class="w-8 h-8" fill="none" viewBox="0 0 31 31"></svg>
+            <div>
+              <p class="font-semibold font-rob">Sarah Johnson</p>
+              <p class="text-gray-500 text-sm">2h ago</p>
+            </div>
+          </div>
+          <p class="mb-4">Just launched my new project! 🚀</p>
+          <div class="flex justify-start gap-4">
+            <button
+              class="flex items-center gap-1 text-gray-600 hover:text-red-500"
+            >
+              ❤️ 42
+            </button>
+            <button
+              class="flex items-center gap-1 text-gray-600 hover:text-blue-500"
+            >
+              💬 12
+            </button>
+            <button
+              class="flex items-center gap-1 text-gray-600 hover:text-green-500"
+            >
+              🔄 5
+            </button>
           </div>
         </div>
       </div>
