Feed back changes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="stylesheet" href="css/style.css" />
     <script src="js/script.js" type="module"></script>
-    <title>Profile Login</title>
+    <title>Profile | CSS Framework</title>
   </head>
   <body class="bg-gray-300 flex items-center justify-center min-h-screen">
     <div
