fixed hover effect

--- a/feed.html
+++ b/feed.html
@@ -56,7 +56,9 @@
                 </div>
               </form>
             </div>
-            <a href="/profile.html" class="py-4 px-2 text-black font-semibold"
+            <a
+              href="/profile.html"
+              class="py-4 px-2 text-black font-semibold hover:text-white transition duration-300"
               >Profile</a
             >
             <a
@@ -64,12 +66,14 @@
               class="py-4 px-2 text-white font-semibold border-b-4 border-customNav"
               >Feed</a
             >
-            <a href="/feed.html" class="py-4 px-2 text-black font-semibold"
+            <a
+              href="/feed.html"
+              class="py-4 px-2 text-black font-semibold hover:text-white transition duration-300"
               >Option</a
             >
             <a
               href="/feed.html"
-              class="py-4 px-2 text-black font-semibold hover:text-customNav transition duration-300"
+              class="py-4 px-2 text-black font-semibold hover:text-white transition duration-300"
               >Signup</a
             >
             <svg
