--- a/profile.html
+++ b/profile.html
@@ -170,7 +170,9 @@
 
     <main>
       <div class="max-w-4xl mx-auto p-4">
-        <div class="bg-white w-96 rounded-lg shadow-md p-4 mb-6">
+        <div
+          class="bg-white w-90 rounded-lg shadow-md p-4 xs:relative left-2 sm:left-1 mb-6 md:left-1 xl:left-1"
+        >
           <div class="flex flex-col md:flex-row items-center gap-6">
             <div class="relative">
               <svg
