--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
+    <script type="module" src="js/module.mjs"></script>
     <script src="js/script.js" type="module"></script>
     <title>Profile | CSS Framework</title>
   </head>
