--- a/index.html
+++ b/index.html
@@ -67,10 +67,17 @@
         </div>
         <button
           type="submit"
+          data-auth="login"
           class="w-full bg-teal-500 text-white py-2 rounded-lg font-semibold hover:bg-teal-300 transition-colors"
         >
           Submit
         </button>
+        <a
+          href="register.html"
+          class="w-full inline-block text-center bg-teal-500 text-white py-2 rounded-lg font-semibold hover:bg-teal-300 transition-colors"
+        >
+          Register
+        </a>
       </form>
     </div>
   </body>
