--- a/register.html
+++ b/register.html
@@ -94,6 +94,8 @@
           </div>
           <button
             type="submit"
+            name="submit"
+            id="submit"
             class="w-full bg-teal-500 text-white py-2 rounded-lg font-semibold hover:bg-teal-400 transition"
           >
             Register
