--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
+    <script type="module" src="js/auth/login.js"></script>
     <script src="js/script.js" type="module"></script>
     <title>Profile | CSS Framework</title>
   </head>
@@ -36,15 +37,15 @@
     >
       <h2 class="text-2xl font-bold text-center mb-6">Login or Register</h2>
 
-      <form action="profile.html" method="GET" class="space-y-4">
+      <form name="auth" action="profile.html" method="POST" class="space-y-4">
         <div>
-          <label for="username" class="block text-gray-700 font-semibold"
-            >Username or Email</label
+          <label for="email" class="block text-gray-700 font-semibold"
+            >Email</label
           >
           <input
             type="text"
-            id="username"
-            name="username"
+            id="email"
+            name="email"
             required
             class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:border-blue-500"
           />
@@ -61,16 +62,14 @@
             required
             class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:border-blue-500"
           />
-          <small class="text-gray-500"
-            >Password must be at least 8 characters.</small
-          >
         </div>
         <button
           type="submit"
-          data-auth="login"
+          name="submit"
+          id="submit"
           class="w-full bg-teal-500 text-white py-2 rounded-lg font-semibold hover:bg-teal-300 transition-colors"
         >
-          Submit
+          Login
         </button>
         <a
           href="register.html"
