--- a/register.html
+++ b/register.html
@@ -6,6 +6,7 @@
     <title>CSS Framework|Register</title>
     <link rel="stylesheet" href="css/style.css" />
     <script src="js/auth/register.js" type="module"></script>
+    <script src="js/script.js" type="module"></script>
   </head>
   <body class="bg-gray-300 flex items-center justify-center min-h-screen">
     <!-- Logo Section -->
@@ -34,25 +35,25 @@
         <h2 class="text-2xl font-bold text-center text-gray-800">Register</h2>
         <form name="auth" action="profile.html" method="POST" class="space-y-4">
           <div>
-            <label for="full-name" class="block text-gray-700 font-semibold">
-              Full Name
+            <label for="name" class="block text-gray-700 font-semibold">
+              Username
             </label>
             <input
               type="text"
-              id="my_username"
-              name="my_username"
+              id="name"
+              name="name"
               required
               class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:border-blue-500"
             />
           </div>
           <div>
-            <label for="username" class="block text-gray-700 font-semibold">
+            <label for="email" class="block text-gray-700 font-semibold">
               Email
             </label>
             <input
               type="email"
-              id="first.last@stud.noroff.no"
-              name="first.last@stud.noroff.no"
+              id="email"
+              name="email"
               required
               class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:border-blue-500"
             />
@@ -66,8 +67,8 @@
             </label>
             <input
               type="password"
-              id="UzI1NiIsInR5cCI"
-              name="UzI1NiIsInR5cCI"
+              id="password"
+              name="password"
               minlength="8"
               required
               class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:border-blue-500"
@@ -76,22 +77,7 @@
               Must be at least 8 characters.
             </small>
           </div>
-          <div>
-            <label
-              for="confirm-password"
-              class="block text-gray-700 font-semibold"
-            >
-              Confirm Password
-            </label>
-            <input
-              type="password"
-              id="confirm-password"
-              name="confirm_password"
-              minlength="8"
-              required
-              class="w-full px-4 py-2 border rounded-lg focus:outline-none focus:border-blue-500"
-            />
-          </div>
+          <div></div>
           <button
             type="submit"
             name="submit"
