--- a/profile.html
+++ b/profile.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
     <script src="js/menu.js" type="module"></script>
-    <script type="module" src="js/auth/register.js"></script>
+    <script type="module" src="js/routes/home.js"></script>
     <title>Profil | CSS Framework</title>
   </head>
   <body class="bg-gray-100">
