--- a/register.html
+++ b/register.html
@@ -34,6 +34,7 @@
       >
         <h2 class="text-2xl font-bold text-center text-gray-800">Register</h2>
         <form name="auth" action="profile.html" method="POST" class="space-y-4">
+          <div id="message"></div>
           <div>
             <label for="name" class="block text-gray-700 font-semibold">
               Username
