--- a/feed.html
+++ b/feed.html
@@ -72,7 +72,7 @@
               >Option</a
             >
             <a
-              href="/feed.html"
+              href="/index.html"
               class="py-4 px-2 text-black font-semibold hover:text-white transition duration-300"
               >Signup</a
             >
@@ -196,53 +196,67 @@
 
         <div
           id="newPostModal"
-          class="hidden fixed inset-0 bg-black bg-opacity-50 items-center justify-center"
+          class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center"
         >
-          <div
-            class="fixed inset-0 flex items-center justify-center bg-gray-500 bg-opacity-50"
-          >
-            <div class="bg-white rounded-lg p-6 w-full max-w-lg m-4">
-              <div class="flex justify-between items-center mb-4">
-                <h2 class="text-xl font-bold">Create New Post</h2>
+          <div class="bg-white rounded-lg p-6 w-full max-w-lg m-4">
+            <div class="flex justify-between items-center mb-4">
+              <h2 class="text-xl font-bold">Create New Post</h2>
+              <button
+                onclick="document.getElementById('newPostModal').classList.add('hidden')"
+                class="text-gray-500 hover:text-gray-700"
+              >
+                <i data-lucide="x" class="w-6 h-6"></i>
+              </button>
+            </div>
+            <form id="postForm" class="space-y-4">
+              <div>
+                <label class="block text-gray-700 mb-2">Title</label>
+                <input
+                  type="text"
+                  id="postTitle"
+                  class="w-full border rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
+                />
+              </div>
+              <div>
+                <label class="block text-gray-700 mb-2">Content</label>
+                <textarea
+                  id="postContent"
+                  class="w-full border rounded-lg px-4 py-2 h-32 focus:outline-none focus:ring-2 focus:ring-blue-500"
+                ></textarea>
+              </div>
+              <div class="flex justify-end space-x-3">
                 <button
+                  type="button"
                   onclick="document.getElementById('newPostModal').classList.add('hidden')"
-                  class="text-gray-500 hover:text-gray-700"
+                  class="px-4 py-2 text-gray-600 hover:text-gray-800"
                 >
-                  <i data-lucide="x" class="w-6 h-6"></i>
+                  Cancel
+                </button>
+                <button
+                  type="submit"
+                  class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition"
+                >
+                  Create Post
                 </button>
               </div>
-              <form id="postForm" class="space-y-4">
-                <div>
-                  <label class="block text-gray-700 mb-2">Title</label>
-                  <input
-                    type="text"
-                    id="postTitle"
-                    class="w-full border rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
-                  />
-                </div>
-                <div>
-                  <label class="block text-gray-700 mb-2">Content</label>
-                  <textarea
-                    id="postContent"
-                    class="w-full border rounded-lg px-4 py-2 h-32 focus:outline-none focus:ring-2 focus:ring-blue-500"
-                  ></textarea>
-                </div>
-                <div class="flex justify-end space-x-3">
-                  <button
-                    type="button"
-                    onclick="document.getElementById('newPostModal').classList.add('hidden')"
-                    class="px-4 py-2 text-gray-600 hover:text-gray-800"
-                  >
-                    Cancel
-                  </button>
-                  <button
-                    type="submit"
-                    class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition"
-                  >
-                    Create Post
-                  </button>
-                </div>
-              </form>
+            </form>
+          </div>
+        </div>
+        <div
+          id="postContentModal"
+          class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center"
+        >
+          <div class="bg-white rounded-lg p-6 w-full max-w-lg m-4">
+            <div id="postContent" class="space-y-4">
+              <!-- Post content will be displayed here -->
+            </div>
+            <div class="flex justify-end">
+              <button
+                onclick="closePostContentModal()"
+                class="bg-red-500 text-white px-4 py-2 rounded-lg hover:bg-red-600 transition"
+              >
+                Close
+              </button>
             </div>
           </div>
         </div>
