--- a/feed.html
+++ b/feed.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/style.css" />
     <script src="js/post/feed.js" type="module"></script>
     <script type="module" src="js/menu.js"></script>
-    <title>Feed | CSS-framework</title>
+    <title>feed | CSS-framework</title>
   </head>
   <body class="bg-gray-100">
     <header class="bg-customPurple text-black p-2">
@@ -234,22 +234,30 @@
                 </button>
                 <button
                   type="submit"
+                  id="createPostButton"
                   class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition"
                 >
                   Create Post
+                </button>
+                <button
+                  type="button"
+                  id="updatePostButton"
+                  class="bg-green-600 text-white px-4 py-2 rounded-lg hover:bg-green-700 transition hidden"
+                  onclick="updatePostHandler()"
+                >
+                  Update Post
                 </button>
               </div>
             </form>
           </div>
         </div>
+
         <div
           id="postContentModal"
           class="hidden fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center"
         >
           <div class="bg-white rounded-lg p-6 w-full max-w-lg m-4">
-            <div id="postContent" class="space-y-4">
-              <!-- Post content will be displayed here -->
-            </div>
+            <div id="postsContent" class="space-y-4"></div>
             <div class="flex justify-end">
               <button
                 onclick="closePostContentModal()"
@@ -260,6 +268,8 @@
             </div>
           </div>
         </div>
+
+        <!-- Posts Container -->
         <div id="postsContainer"></div>
       </div>
     </main>
