work in progress for search bar

--- a/feed.html
+++ b/feed.html
@@ -48,6 +48,7 @@
                   <input
                     type="text"
                     name="search"
+                    id="searchInput"
                     placeholder="Search post"
                     autocomplete="off"
                     aria-label="Search post"
