Search bar done

--- a/feed.html
+++ b/feed.html
@@ -28,33 +28,35 @@
           <div class="hidden md:flex items-center space-x-4">
             <div class="flex flex-col sm:flex-row justify-between py-3 px-6">
               <form action="" class="w-full sm:max-w-md">
-                <div
-                  class="relative flex items-center text-gray-400 focus-within:text-black"
-                >
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    fill="none"
-                    viewBox="0 0 24 24"
-                    stroke-width="1.5"
-                    stroke="currentColor"
-                    class="w-5 h-5 absolute ml-3 pointer-events-none"
+                <fieldset>
+                  <div
+                    class="relative flex items-center text-gray-400 focus-within:text-black"
                   >
-                    <path
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                      d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      fill="none"
+                      viewBox="0 0 24 24"
+                      stroke-width="1.5"
+                      stroke="currentColor"
+                      class="w-5 h-5 absolute ml-3 pointer-events-none"
+                    >
+                      <path
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        d="m21 21-5.197-5.197m0 0A7.5 7.5 0 1 0 5.196 5.196a7.5 7.5 0 0 0 10.607 10.607Z"
+                      />
+                    </svg>
+                    <input
+                      type="text"
+                      name="search"
+                      id="searchInput"
+                      placeholder="Search post"
+                      autocomplete="off"
+                      aria-label="Search post"
+                      class="w-full pr-3 pl-10 py-2 font-semibold placeholder-gray-500 text-black rounded-2xl border-none ring-2 ring-gray-300 focus:ring-gray-500 focus:ring-2"
                     />
-                  </svg>
-                  <input
-                    type="text"
-                    name="search"
-                    id="searchInput"
-                    placeholder="Search post"
-                    autocomplete="off"
-                    aria-label="Search post"
-                    class="w-full pr-3 pl-10 py-2 font-semibold placeholder-gray-500 text-black rounded-2xl border-none ring-2 ring-gray-300 focus:ring-gray-500 focus:ring-2"
-                  />
-                </div>
+                  </div>
+                </fieldset>
               </form>
             </div>
             <a
