--- a/feed.html
+++ b/feed.html
@@ -188,13 +188,18 @@
           <div class="flex items-center space-x-4">
             <span class="text-gray-700">Sort by:</span>
             <select
+              id="sortSelect"
               class="border rounded-md px-3 py-1.5 text-gray-700 focus:outline-none focus:ring-2 focus:ring-blue-500"
             >
-              <option>Most Recent</option>
-              <option>Most Popular</option>
-              <option>Most Commented</option>
+              <option value="travel">Travel</option>
+              <option value="dog">dog</option>
+              <option value="frontend">frontend</option>
+              <option value="meme">meme</option>
+              <option value="numerouno">numerouno</option>
             </select>
           </div>
+          <div class="flex items-center space-x-4 mt-4">
+          
         </div>
 
         <div
